# NewsCrawler

./: .gitignore  CLAUDE.md  CRAWLER_EXPANSION_REPORT.md  DEPLOYMENT_FINAL.md  DOCKER_BUILD_TROUBLESHOOTING.md  DOCKER_FIX_FINAL.md  DOWNLOAD_INFO.txt  ENHANCED_CRAWLER_REPORT.md  FINAL_FIX_REPORT.md  FINAL_PROJECT_REPORT.md  INTERNATIONAL_NEWS_GUIDE.md  NewsCrawler-v3.0-checksums.md5  PACKAGE_README.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  README.en.md  README.md  SCHEDULER_README.md  SUMMARY.txt  TESTING_COMPLETE_REPORT.md  WEBUI_GUIDE.md  docker-compose.yml  pyproject.toml  scheduler_cli.py  scheduler_examples.py  test_complete_system.py  test_config_only.py  test_crawler_registry.py  test_enhanced_crawlers.py  test_functional_demo.py  test_international_news.py  test_scheduler.py  update-and-build.sh
.claude/skills/china-news-crawler/: SKILL.md
.claude/skills/china-news-crawler/scripts/: extract_news.py
news-extractor-ui/frontend/src/: App.vue
news-extractor-ui/frontend/src/components/: CountryStats.vue  HistoryList.vue  PlatformSelector.vue  ResultViewerNew.vue  SchedulerManager.vue  TaskList.vue  UrlInputNew.vue
news-extractor-ui/frontend/src/locales/: en.json  zh-CN.json
news-extractor-ui/frontend/src/services/: schedulerApi.ts
news-extractor-ui/frontend/src/types/: index.ts  scheduler.ts
news_crawler/: scheduler.py
news_crawler/config/: news_sources.json
news_crawler/core/: enhanced.py  selector_configs.py  simple_crawler.py
news_crawler/generic/: __init__.py  crawler.py
news_crawler/international_news/: README.md  __init__.py  base_crawler.py  cli.py  config_manager.py  scheduler.py
news_crawler/international_news/configs/: __init__.py  sites_config.py
news_crawler/scheduler/: __init__.py  database.py  models.py  scheduler.py
news_crawler/sites/: __init__.py  all_crawlers.py  batch2_crawlers.py  batch3_asian_crawlers.py  batch4_western_crawlers.py  batch5_taiwan_hk_crawlers.py  crawlers.py  enhanced_crawlers.py  extended_crawlers.py
news_crawler/twitter_news/: __init__.py  twitter_client.py  twitter_news.py  twitter_types.py
news_crawler/wechat_news/: wechat_news.py
news_extractor_backend/: main.py  pyproject.toml
news_extractor_backend/api/: extract.py  scheduler.py
news_extractor_core/: pyproject.toml
news_extractor_core/adapters/: __init__.py  twitter.py
news_extractor_core/services/: __init__.py  detector.py  extractor.py  formatter.py  image_service.py
news_extractor_mcp/: pyproject.toml
