[project]
name = "news-crawler-collection"
version = "0.1.0"
description = "A multi-platform news and content crawler collection for educational purposes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml==5.3.0",
    "parsel==1.9.1",
    "playwright==1.42.0",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "tenacity==8.2.2",
    "DrissionPage==4.1.0.9",
    "pytz==2024.2",
    "demjson3==3.0.6",
    "curl-cffi==0.7.3",
    "news-extractor-core",
    "news-extractor-backend",
    "news-extractor-mcp",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
news-extractor-backend = "news_extractor_backend.cli:main"
news-extractor-mcp = "news_extractor_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv]
[tool.uv.sources]
news-extractor-core = { workspace = true }
news-extractor-backend = { workspace = true }
news-extractor-mcp = { workspace = true }

[tool.uv.workspace]
members = [
    "news_extractor_core",
    "news_extractor_backend",
    "news_extractor_mcp",
]


[tool.hatch.build.targets.wheel]
packages = [
    "news_crawler",
    "toutiao_news",
    "wechat_news",
    "detik_news",
    "naver_news",
    "lennysnewsletter",
    "quora",
    "pexel",
    "pixabay",
    "cover_video",
    "mixkit_video",
    "video_config",
    "libs",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
