[project]
name = "news-extractor-backend"
version = "0.1.0"
description = "FastAPI backend exposing news extraction APIs"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "websockets==13.1",
    "news-extractor-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_extractor_backend"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
news-extractor-core = { workspace = true }

[dependency-groups]
dev = []

[tool.uv]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
