[project]
name = "news-extractor-core"
version = "0.1.0"
description = "Shared news extraction core (models, services, adapters)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "lxml>=5.3.0",
    "parsel>=1.9.0",
    "playwright>=1.42.0",
    "tenacity>=8.2.0",
    "DrissionPage>=4.1.0.9",
    "pytz>=2024.2",
    "demjson3>=3.0.6",
    "curl-cffi>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "news_extractor_core",
    "news_crawler",
]

[dependency-groups]
dev = []

[tool.uv]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = false
